--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,12 @@
     <string name="certificates">Certificates</string>
     <string name="certificate">Certificate</string>
 
+    <string name="menu_item_account">My Account</string>
+    <string name="menu_item_settings">Settings</string>
+    <string name="menu_item_billing">Billing</string>
+    <string name="menu_item_team">Team</string>
+    <string name="menu_item_sign_out">Sign out</string>
+
     <string name="pref_key_night" translatable="false">key_night_mode</string>
     <string name="pref_night_title">Night mode</string>
     <string name="pref_night_summary">Select a dark or light theme.</string>
