--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,10 +18,10 @@
     <string name="menu_item_sign_out">Sign out</string>
 
     <string name="pref_key_night" translatable="false">key_night_mode</string>
-    <string name="pref_night_title">Night mode</string>
+    <string name="pref_night_title">Theme</string>
     <string name="pref_night_summary">Select a dark or light theme.</string>
 
-    <string name="pref_night_dialog">Set Night mode</string>
+    <string name="pref_night_dialog">Set Theme</string>
 
     <string name="pref_night_auto" translatable="false">auto</string>
     <string name="pref_night_on" translatable="false">on</string>
